# mojave

./: LICENSE  Makefile  README.md  _mojave.c  mojave.c  mojave.py  mojave_eda.py
pip_package/: MANIFEST.in  pyproject.toml  setup.py
pip_package/mojave_eda/: __init__.py  mojave_eda.py
pip_package/mojave_eda/font/: License.html
pip_package/mojave_eda/images/: README
