[build-system]
requires = ["setuptools", "pysdl2-dll", "numpy"]
build-backend = "setuptools.build_meta"
[project]
name = "mojave_eda"
version = "0.0.5"
authors = [
  { name="Kevin Player", email="kjplaye@gmail.com" },
]
description = "Multidimensional data visualization"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/kjplaye/mojave"
[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = [""]